--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <title>Document</title>
 </head>
 <body>
-    <form method="post">
-        <input type="text" name="first_name">
-        <input type="text" name="last_name">
-        <input type="submit">
-    </form>
+    {% if form %}
+        {% include form %}
+    {% endif %}
+    <p>{{ date }}</p>
 </body>
 </html>
