--- a/templates/index.html
+++ b/templates/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <title>Document</title>
+    <title>Celeb birth search</title>
 </head>
 <body>
-    {% if date %}
-        <p class="items">{{ date }}</p>
-    {% endif %}
-
     {% if form %}
         {% include form %}
     {% else %}
+        {% if date %}
+            <p class="items">{{ date }}</p>
+        {% else %}
+            <p class="items">Nie znaleziono osoby...</p>
+        {% endif %}
         <a class="items" href="/">Wróć</a>
     {% endif %}
 </body>
