--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
         {% include form %}
     {% else %}
         {% if date %}
+            <img src="{{ img }}">
             <p class="items">{{ date }}</p>
         {% else %}
             <p class="items">Nie znaleziono osoby...</p>
