--- a/templates/form.html
+++ b/templates/form.html
@@ -1,6 +1,6 @@
 <h3 class="items">Wpisz imię i nazwisko swojej osoby...</h3>
 <form method="post">
-    <input type="text" name="first_name" placeholder="Imię">
-    <input type="text" name="last_name" placeholder="Nazwisko">
-    <input type="submit">
+    <input type="text" name="first_name" placeholder="Imię" required>
+    <input type="text" name="last_name" placeholder="Nazwisko" required>
+    <input type="submit" class="btn">
 </form>
