--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Albert+Sans:wght@200;300&family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Albert+Sans:wght@200;300&family=Roboto:wght@500&display=swap');
 
 * {
     font-family: 'Roboto', sans-serif;
@@ -7,15 +7,84 @@
 }
 
 body {
-    background-color: rgb(218, 206, 188);
+    height: 100vh;
+    width: 100%;
+    background-color: #3c40c6;
+    background-image: url(https://flatuicolors.com/static/img/stars-opacity.0979c1.svg);
     display: flex;
     align-items: center;
     justify-content: center;
     flex-flow: column;
-    margin-top: 15%;
+    transition: .3s;
 }
 
 .items {
-    color: black;
+    color: white;
     margin: 10px;
+    font-size: 26px;
+    transition: .3s;
+    text-align: center;
+}
+form {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2%;
+    transition: .3s;
+}
+input {
+    outline: 0;
+    border: none;
+    margin: 1%;
+    font-size: 22px;
+    color: #000;
+    height: 4vh;
+    width: auto;
+    transition: .3s;
+    border-radius: 8px;
+}
+input:hover {
+    transform: scale(1.07);
+}
+.btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: #5074d6;
+    color: white;
+    font-size: 18px;
+    height: 4.5vh;
+    width: 120px;
+    cursor: pointer;
+    transition: .3s;
+}
+img {
+    width: 350px;
+    transition: .3s;
+}
+.btn_result:hover {
+    transform: scale(1.05);
+    color: #5074d6;
+}
+@media screen and (max-width: 700px) {
+    form {
+        flex-direction: column;
+    }
+}
+@media screen and (max-width: 460px) {
+    img {
+        width: 300px;
+    }
+}
+@media screen and (max-width: 420px) {
+    img {
+        width: 250px;
+    }
+}
+@media screen and (max-width: 330px) {
+    img {
+        width: 200px;
+    }
 }
