--- a/templates/index.html
+++ b/templates/index.html
@@ -13,11 +13,11 @@
     {% else %}
         {% if date %}
             <img src="{{ img }}">
-            <p class="items">{{ date }}</p>
+            <p class="items">urodzony {{ date }}</p>
         {% else %}
             <p class="items">Nie znaleziono osoby...</p>
         {% endif %}
-        <a class="items" href="/">Wróć</a>
+        <a class="items btn_result" href="/">Wróć</a>
     {% endif %}
 </body>
 </html>
