Added name in result

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
     {% else %}
         {% if date %}
             <img src="{{ img }}">
+            <p class="items">{{ name }}</p>
             <p class="items">{{ date }}</p>
         {% else %}
             <p class="items">Nie znaleziono osoby...</p>
